--- a/card.html
+++ b/card.html
@@ -13,30 +13,31 @@
 <body>
     <div class="card">
         <div class="card-content">
-          <h1>The Second City</h1>
-          <div class="subtitle">City of Big Shoulders</div>
+          <h1>Black Cat</h1>
+          <div class="subtitle">Black cat </div>
           <p>
-            Chicago is the home of the blues and the truth of jazz, the heart of comedy and the idea of
-            the skyscraper. It's a city with a swagger, but without the surliness or even the fake smiles
-            found in other cities of its size.
+            A black cat is a domestic cat with black fur that may be a mixed or specific breed, or a common domestic cat of no particular breed.
+            The Cat Fanciers' Association (CFA) recognizes 22 cat breeds that can come with solid black coats.[1] The Bombay breed is exclusively black. 
+            All-black fur pigmentation is slightly more prevalent in male cats than female cats. Most black cats have 
+            golden irises due to their high melanin pigment content. In popular myths, witches are believed to be associated with black cats.
           </p>
       
           <div class="card-details">
             <div class="card-details-inner">
               <div class="read-more">
-                <a class="button" href="https://en.wikivoyage.org/wiki/Chicago">Read Article</a>
+                <a class="button" href="https://en.wikipedia.org/wiki/Black_cat">Read Article</a>
               </div>
               <div class="options">
                 <div class="comments">
                   <a href="#!">
                     <i class="fa fa-comments-o"></i>
-                    16 comments
+                    33 comments
                   </a>
                 </div>
                 <div class="likes">
                   <a href="#!">
                     <i class="fa fa-heart-o"></i>
-                    322 likes
+                    369 likes
                   </a>
                 </div>
               </div>
